--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "Rafael Gonçalves",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
